Bug 92002 - REGRESSION(r123169): It made fast/js/dfg-inline-arguments-use-from-uninlined-code.html fail on 32 bit platforms
Summary: REGRESSION(r123169): It made fast/js/dfg-inline-arguments-use-from-uninlined-...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords: Qt, QtTriaged
Depends on:
Blocks: 79666 91717
  Show dependency treegraph
 
Reported: 2012-07-23 07:48 PDT by Csaba Osztrogonác
Modified: 2012-07-24 03:18 PDT (History)
3 users (show)

See Also:


Attachments
the patch (1.89 KB, patch)
2012-07-23 15:34 PDT, Filip Pizlo
mhahnenberg: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 Csaba Osztrogonác 2012-07-23 08:08:53 PDT
It is skipped by https://trac.webkit.org/changeset/123338 , please unskip it with the proper fix. Thanks.
Comment 2 Filip Pizlo 2012-07-23 15:34:45 PDT
Created attachment 153876 [details]
the patch
Comment 3 Filip Pizlo 2012-07-23 15:39:09 PDT
Landed in http://trac.webkit.org/changeset/123393.  This changeset also unskips the test.
Comment 4 Csaba Osztrogonác 2012-07-24 03:18:02 PDT
(In reply to comment #3)
> Landed in http://trac.webkit.org/changeset/123393.  This changeset also unskips the test.

Thanks for the quick fix. ;-)